--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -55,6 +55,8 @@
             border-bottom-right-radius: 10px;
             max-height                : 200px;
             overflow                  : hidden;
+            background                : #fff;
+            z-index                   : 100000;
             box-shadow                : 2px 6px 6px 0 rgba(0, 0, 0, 0.06);
 
             ul {
@@ -78,44 +80,39 @@
 }
 
 .main-layout {
-    font-size: 2rem;
+    position  : relative;
+    margin-top: 30px;
+    font-size : 2rem;
 
-    .container {
-        .main-layout {
-            position  : relative;
-            margin-top: 30px;
+    .background {
+        position     : absolute;
+        z-index      : -1;
+        height       : auto;
+        overflow     : hidden;
+        width        : 100%;
+        border       : #999;
+        border-radius: 5px;
 
-            .background {
-                position     : absolute;
-                z-index      : -1;
-                height       : auto;
-                overflow     : hidden;
-                width        : 100%;
-                border       : #999;
-                border-radius: 5px;
+        img,
+        video {
+            filter    : blur(10px);
+            width     : 100%;
+            object-fit: cover;
+        }
+    }
 
-                img,
-                video {
-                    filter    : blur(10px);
-                    width     : 100%;
-                    object-fit: cover;
-                }
-            }
+    .layout-top {
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+    }
 
-            .layout-top {
-                display        : flex;
-                justify-content: center;
-                align-items    : center;
-            }
-
-            .layout-btn {
-                .weather-5days {
-                    display        : flex;
-                    justify-content: space-between;
-                    align-items    : center;
-                    margin-top     : 10px;
-                }
-            }
+    .layout-btn {
+        .weather-5days {
+            display        : flex;
+            justify-content: space-between;
+            align-items    : center;
+            margin-top     : 10px;
         }
     }
 }
