--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,8 @@
-/*# sourceMappingURL=style.css.map */
+.layout-btn .btn {
+  font-size: 1.6rem;
+  border: 1px solid;
+  min-width: 150px;
+}
+.layout-btn .btn:hover {
+  opacity: 0.8;
+}/*# sourceMappingURL=style.css.map */
