--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,8 +7,8 @@ ul,
 li,
 i,
 b,
-strong,
 p,
+strong,
 h1,
 h2,
 h3,
@@ -27,13 +27,49 @@ h6 {
   width: 20%;
 }
 
-g.layout-chinh .text .text-1 {
-  color: #fff;
-}
-g.layout-chinh.active {
-  color: #fff;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-.layout-chinh-phu .text {
-  color: #f5f;
+html {
+  font-size: 62.5%;
+}
+
+a,
+ul,
+li,
+i,
+b,
+p,
+strong,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  list-style: none;
+  text-decoration: none;
+  color: currentColor;
+  padding: 0;
+  margin: 0;
+}
+
+.col-custom-20 {
+  flex: 0 0 auto;
+  width: 20%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=base.css.map */
