--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,16 @@
+.layout-btn {
+    .btn {
+        font-size: 1.6rem;
+        border   : 1px solid;
+        min-width: 150px;
+
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+}
+
 .layout-header {
     margin-top: 40px;
 
@@ -33,6 +46,7 @@
         }
 
     }
+
 
     .search {
         margin-top: 30px;
@@ -80,9 +94,10 @@
 }
 
 .main-layout {
-    position  : relative;
-    margin-top: 30px;
-    font-size : 2rem;
+    position      : relative;
+    margin-top    : 30px;
+    font-size     : 1.65rem;
+    letter-spacing: 1.3px;
 
     .background {
         position     : absolute;
@@ -97,6 +112,7 @@
         video {
             filter    : blur(10px);
             width     : 100%;
+            height    : 100%;
             object-fit: cover;
         }
     }
@@ -113,6 +129,14 @@
             justify-content: space-between;
             align-items    : center;
             margin-top     : 10px;
+
+            &>div {
+                div:first-child {
+                    font-size  : 2.5rem;
+                    font-weight: 600;
+                    font-style : italic;
+                }
+            }
         }
     }
 }
