--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,4 +113,20 @@
   font-size: 2.5rem;
   font-weight: 600;
   font-style: italic;
+}
+
+.layout-table .main-table .table {
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.layout-table .main-table .table tr:hover {
+  background-color: #ddd;
+}
+.layout-table .main-table .table tr th {
+  height: 70px;
+  text-align: center;
+}
+.layout-table .main-table .table tr th p {
+  font-weight: 500;
+  font-size: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
