--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -140,3 +140,29 @@
         }
     }
 }
+
+
+.layout-table {
+    .main-table {
+        .table {
+            width     : 100%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+            tr {
+                &:hover {
+                    background-color: #ddd;
+                }
+
+                th {
+                    height    : 70px;
+                    text-align: center;
+
+                    p {
+                        font-weight: 500;
+                        font-size  : 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+}
