--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -156,6 +156,7 @@
                 th {
                     height    : 70px;
                     text-align: center;
+                    padding   : 10px;
 
                     p {
                         font-weight: 500;
