--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@
   font-size: 1.2rem;
   font-weight: 600;
   margin: 20px 0 20px;
+  border-radius: 5px;
 }
 .sub-table tr {
   width: 100%;
@@ -127,4 +128,5 @@
 .sub-table tr td {
   border: 1px #ccc solid;
   padding: 14px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
