--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,8 @@
   filter: blur(10px);
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .main-layout .layout-top {
   display: flex;
