--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -67,8 +67,11 @@ h6 {
     width: 20%;
 }
 
-.col-custom-table {
-    flex : 0 0 auto;
-    width: 11.111111111111%;
-
+.overlay {
+    position        : absolute;
+    top             : 0;
+    left            : 0;
+    width           : 100%;
+    height          : 100%;
+    background-color: rgba(0, 0, 0, 0.3);
 }
